@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-23T08:25:33Z",
+  "timestamp" : "2022-06-23T16:26:58Z",
   "count_outdated" : 2169,
   "uniques_outdated" : 441,
-  "count" : 2211,
+  "count" : 2210,
   "uniques" : 467,
   "clones" : [
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
