@@ -1,3 +1,10 @@
+2022-06-23T16:26:58Z:
+* notice: last 14d: unq all: 11 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 441 2169 / 467 2211
+* notice: next accum: outdated-unq outdated-all / unq all: 441 2169 / 467 2210
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-06-09]
+
 2022-06-23T08:25:33Z:
 * notice: last 14d: unq all: 11 42
 * notice: prev accum: outdated-unq outdated-all / unq all: 441 2169 / 466 2211
